--- a/app/src/main/res/layout/day_card_layout.xml
+++ b/app/src/main/res/layout/day_card_layout.xml
@@ -12,14 +12,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+
+
         <LinearLayout
             android:id="@+id/click_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/tiny_padding"
-            android:gravity="right"
             >
+
             <TextView
+                android:id="@+id/tv_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textColor="@color/colorDeepGray"
+                android:textSize="@dimen/txt_stext"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:paddingLeft="@dimen/small_padding"
+                />
+
+            <TextView
+                android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2018-08-07"
@@ -30,6 +46,7 @@
                 />
 
             <TextView
+                android:id="@+id/tv_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="목요일"
