--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4B4B4B</color>
     <color name="colorPrimaryDark">#4B4B4B</color>
-    <color name="colorAccent">#ff2973</color>
+    <color name="colorAccent">#0eb6bb</color>
 
     <color name="colorDeeperSkyBlue">#0eb6bb</color>
     <color name="colorDeepSkyBlue">#61d2d6</color>
